; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/mvm/extr_utils.c_iwl_mvm_send_cmd_pdu.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/mvm/extr_utils.c_iwl_mvm_send_cmd_pdu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_mvm = type { i32 }
%struct.iwl_host_cmd = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iwl_mvm_send_cmd_pdu(%struct.iwl_mvm* %0, i32 %1, i32 %2, i32 %3, i8* %4) #0 {
  %6 = alloca %struct.iwl_mvm*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca %struct.iwl_host_cmd, align 4
  store %struct.iwl_mvm* %0, %struct.iwl_mvm** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %12 = getelementptr inbounds %struct.iwl_host_cmd, %struct.iwl_host_cmd* %11, i32 0, i32 0
  %13 = load i32, i32* %8, align 4
  store i32 %13, i32* %12, align 4
  %14 = getelementptr inbounds %struct.iwl_host_cmd, %struct.iwl_host_cmd* %11, i32 0, i32 1
  %15 = load i8*, i8** %10, align 8
  %16 = ptrtoint i8* %15 to i32
  store i32 %16, i32* %14, align 4
  %17 = getelementptr inbounds %struct.iwl_host_cmd, %struct.iwl_host_cmd* %11, i32 0, i32 2
  %18 = load i32, i32* %9, align 4
  store i32 %18, i32* %17, align 4
  %19 = getelementptr inbounds %struct.iwl_host_cmd, %struct.iwl_host_cmd* %11, i32 0, i32 3
  %20 = load i32, i32* %7, align 4
  store i32 %20, i32* %19, align 4
  %21 = load %struct.iwl_mvm*, %struct.iwl_mvm** %6, align 8
  %22 = call i32 @iwl_mvm_send_cmd(%struct.iwl_mvm* %21, %struct.iwl_host_cmd* %11)
  ret i32 %22
}

declare dso_local i32 @iwl_mvm_send_cmd(%struct.iwl_mvm*, %struct.iwl_host_cmd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
